--- a/ansible_cloudformation.yaml
+++ b/ansible_cloudformation.yaml
@@ -243,6 +243,8 @@ Resources:
           sudo su
           yum install -y python38
           dnf install -y https://s3.amazonaws.com/ec2-downloads-windows/SSMAgent/latest/linux_amd64/amazon-ssm-agent.rpm
+          sudo systemctl enable amazon-ssm-agent
+          sudo systemctl start amazon-ssm-agent
 
   EC2Instance3:
     Type: "AWS::EC2::Instance"
